<resources>
    <string name="app_name">IntentProject</string>
    <string name="biasa">Pindah ke activity baru</string>
    <string name="data">Pindah ke activity baru dengan Data</string>
    <string name="objek">Pindah ke activity baru dengan objek</string>
    <string name="tittle">Intent Project implicit dan explicit</string>
    <string name="tittle_data">Data Diterima</string>
    <string name="tittle_telepon">Kontak Langsung</string>
    <string name="tittle_anotherapps">buka aplikasi lain</string>
    <string name="second_tittle">halaman kedua menggunaakan intent biasa untuk pindah halaman</string>
    <string name="tambah_data">Tambah Data</string>>
    <string name="gender">Jenis Kelamin Anda</string>>
    <string name="laki_laki">Laki-laki</string>>
    <string name="perempuan">Perempuan</string>>
    <string name="submit">simpan</string>>
    <string name="result_halaman_tambah_data">hasil dari halaman tambah data</string>

</resources>