<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/btn_pindah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biasa"
        android:layout_marginBottom="10dp"/>
<Button
        android:id="@+id/btn_pindah_dengandata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:layout_marginBottom="10dp"/>
<Button
        android:id="@+id/btn_pindah_denganobjek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objek"
        android:layout_marginBottom="10dp"/>
<Button
        android:id="@+id/btn_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_telepon"
        android:layout_marginBottom="10dp"/>
<Button
        android:id="@+id/btn_open_anotherapps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_anotherapps"
        android:layout_marginBottom="10dp"/>
<Button
        android:id="@+id/btn_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_data"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_halaman_tambah_data"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        />
</LinearLayout>