<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".TambahActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/gender"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>
    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RadioButton
            android:id="@+id/rb_laki_laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>
        <RadioButton
            android:id="@+id/rb_perempuan"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"
            android:layout_marginBottom="16dp"/>

    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_tambah_data"
        android:text="@string/submit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/result_halaman_tambah_data"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

</LinearLayout>